--- a/index.html
+++ b/index.html
@@ -3,11 +3,47 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./src/css/config.css">
   <title>SidyFólio</title>
 </head>
 <body>
-  <header></header>
-  <main></main>
+  <header>
+    <nav id="navbar">
+      <div id="perfil-nav">
+        <img src="./src/assets/img/perfil.webp">
+        <p class="p1">Borges</p>
+        <p class="p2">Costta</p>
+      </div>
+      <ul id="list-nav">
+        <li><a href="">Home</a></li>
+        <li><a href="">Projects</a></li>
+        <li><a href="">About</a></li>
+        <li><a href="">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+  <main>
+    <section id="home">
+      <div class="perfil">
+        <div class="name-perfil">
+          <p class="first-name">Borges</p>
+          <p class="last-name">Costta</p>
+        </div>
+        <p class="function">Front End Developer</p>
+        <div class="links">
+          <a href=""><img src="./src/assets/img/github.png" alt="logo github"></a>
+          <a href=""><img src="./src/assets/img/linkedin.png" alt="logo linkedin"></a>
+          <a href=""><img src="./src/assets/img/instagram.png" alt="logo instagram"></a>
+          <a href=""><img src="./src/assets/img/whatsapp.png" alt="logo whatsapp"></a>
+        </div>
+      </div>
+      <img class="img-perfil" src="./src/assets/img/perfil2.jpg">
+    </section>
+
+    <section id="projects">
+      <h1 class="title">My Projects</h1>
+    </section>
+  </main>
   <footer></footer>
 </body>
 </html>
