fazendo pequenas alterações

--- a/index.html
+++ b/index.html
@@ -43,6 +43,10 @@
     <section id="projects">
       <h1 class="title">My Projects</h1>
     </section>
+
+    <section id="about">
+      <h1 class="title">About Me</h1>
+    </section>
   </main>
   <footer></footer>
 </body>
