--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
   </header>
   <main>
     <section id="home">
+      <img class="img-perfil" src="./src/assets/img/perfil.webp">
       <div class="perfil">
         <div class="name-perfil">
           <p class="first-name">Borges</p>
@@ -31,13 +32,12 @@
         </div>
         <p class="function">Front End Developer</p>
         <div class="links">
-          <a href=""><img src="./src/assets/img/github.png" alt="logo github"></a>
+          <a href="https://github.com/SidyDev-AI"><img src="./src/assets/img/github.png" alt="logo github"></a>
           <a href=""><img src="./src/assets/img/linkedin.png" alt="logo linkedin"></a>
           <a href=""><img src="./src/assets/img/instagram.png" alt="logo instagram"></a>
           <a href=""><img src="./src/assets/img/whatsapp.png" alt="logo whatsapp"></a>
         </div>
       </div>
-      <img class="img-perfil" src="./src/assets/img/perfil2.jpg">
     </section>
 
     <section id="projects">
