--- a/index.html
+++ b/index.html
@@ -39,14 +39,8 @@
         </div>
       </div>
     </section>
-
-    <section id="projects">
-      <h1 class="title">My Projects</h1>
-    </section>
-
-    <section id="about">
-      <h1 class="title">About Me</h1>
-    </section>
+    <section id="projects"></section>
+    <section id="about"></section>
   </main>
   <footer></footer>
 </body>
