--- a/index.html
+++ b/index.html
@@ -39,7 +39,58 @@
         </div>
       </div>
     </section>
-    <section id="projects"></section>
+    <section id="projects">
+      <div class="title-ink">
+        <h1 class="title">Projects</h1>
+        <img src="src/assets/img/arrow.png">
+      </div>
+      <div class="list-projects">
+        <div class="card">
+          <h3 class="title-card">Projeto 001</h3>
+          <img src="src/assets/img/perfil.webp">
+          <div class="techs">
+            <h3 class="title-tech">Tech:</h3>
+            <img src="src/assets/img/html.png">
+            <img src="src/assets/img/css.png">
+            <img src="src/assets/img/js.png">
+            <img src="src/assets/img/react.png">
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="title-card">Projeto 002</h3>
+          <img src="src/assets/img/perfil.webp">
+          <div class="techs">
+            <h3 class="title-tech">Tech:</h3>
+            <img src="src/assets/img/html.png">
+            <img src="src/assets/img/css.png">
+            <img src="src/assets/img/js.png">
+            <img src="src/assets/img/react.png">
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="title-card">Projeto 003</h3>
+          <img src="src/assets/img/perfil.webp">
+          <div class="techs">
+            <h3 class="title-tech">Tech:</h3>
+            <img src="src/assets/img/html.png">
+            <img src="src/assets/img/css.png">
+            <img src="src/assets/img/js.png">
+            <img src="src/assets/img/react.png">
+          </div>
+        </div>
+        <div class="card">
+          <h3 class="title-card">Projeto 004</h3>
+          <img src="src/assets/img/perfil.webp">
+          <div class="techs">
+            <h3 class="title-tech">Tech:</h3>
+            <img src="src/assets/img/html.png">
+            <img src="src/assets/img/css.png">
+            <img src="src/assets/img/js.png">
+            <img src="src/assets/img/react.png">
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="about"></section>
   </main>
   <footer></footer>
