--- a/index.html
+++ b/index.html
@@ -91,7 +91,9 @@
         </div>
       </div>
     </section>
-    <section id="about"></section>
+    <section id="about">
+      
+    </section>
   </main>
   <footer></footer>
 </body>
